--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
 
   <link rel="stylesheet" href="assets/scss/bootstrap.scss">
 
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <!-- Google Fonts -->
   <link
     href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,300,700,800,400,600'
